Autoresize on WelcomePageController

--- a/src/main/resources/com/calendly/calendly/css/style.css
+++ b/src/main/resources/com/calendly/calendly/css/style.css
@@ -9,6 +9,7 @@
 .container-level-2 {
     -fx-background-color: secondaryBackgroundColor;
     -fx-background-radius: 10px;
+    -fx-width: 50%;
 }
 
 .primaryButton {
