--- a/src/main/resources/com/calendly/calendly/fxml/WelcomePage.fxml
+++ b/src/main/resources/com/calendly/calendly/fxml/WelcomePage.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
@@ -9,7 +10,10 @@
    <children>
         <StackPane fx:id="stackPane" layoutX="194.0" layoutY="62.0" prefHeight="277.0" prefWidth="212.0" styleClass="container-level-2" AnchorPane.bottomAnchor="61.0" AnchorPane.leftAnchor="194.0" AnchorPane.rightAnchor="194.0" AnchorPane.topAnchor="62.0">
            <children>
-              <Button fx:id="continueButton" mnemonicParsing="false" onAction="#actionContinueButton" styleClass="primaryButton" text="Continue" StackPane.alignment="BOTTOM_CENTER" />
+              <Button fx:id="continueButton" mnemonicParsing="false" onAction="#actionContinueButton" styleClass="primaryButton" text="Continue" StackPane.alignment="BOTTOM_CENTER">
+               <StackPane.margin>
+                  <Insets bottom="25.0" />
+               </StackPane.margin></Button>
            </children>
         </StackPane>
    </children>
