css LoginView.fxml

--- a/src/main/resources/com/calendly/calendly/css/dark.css
+++ b/src/main/resources/com/calendly/calendly/css/dark.css
@@ -16,6 +16,7 @@
 
     primaryBackgroundColor: systemGray6;
     secondaryBackgroundColor: systemGray5;
+    thirdBackgroundColor: systemGray4;
 
     primaryTextColor: white;
 
