--- a/src/main/resources/com/calendly/calendly/fxml/LoginView.fxml
+++ b/src/main/resources/com/calendly/calendly/fxml/LoginView.fxml
@@ -7,15 +7,16 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.calendly.calendly.Controller.LoginController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="900.0" styleClass="external-pane" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.calendly.calendly.Controller.LoginController">
    <children>
-      <Pane layoutX="273.0" layoutY="58.0" prefHeight="425.0" prefWidth="354.0" AnchorPane.bottomAnchor="217.0" AnchorPane.leftAnchor="273.0" AnchorPane.rightAnchor="273.0" AnchorPane.topAnchor="58.0">
+      <Pane layoutX="273.0" layoutY="58.0" prefHeight="425.0" prefWidth="354.0" styleClass="container-level-2" AnchorPane.bottomAnchor="217.0" AnchorPane.leftAnchor="273.0" AnchorPane.rightAnchor="273.0" AnchorPane.topAnchor="58.0">
          <children>
-            <TextField fx:id="UsernameField" layoutX="92.0" layoutY="201.0" />
-            <PasswordField fx:id="PasswordField" layoutX="92.0" layoutY="257.0" />
-            <Button fx:id="accediButton" layoutX="93.0" layoutY="374.0" mnemonicParsing="false" onAction="#Accedi" prefHeight="25.0" prefWidth="169.0" text="Accedi" />
+            <TextField fx:id="UsernameField" layoutX="92.0" layoutY="201.0" promptText="username" styleClass="loginField" />
+            <PasswordField fx:id="PasswordField" layoutX="92.0" layoutY="257.0" promptText="password" styleClass="loginField" />
+            <Button fx:id="accediButton" layoutX="93.0" layoutY="374.0" mnemonicParsing="false" onAction="#Accedi" prefHeight="25.0" prefWidth="169.0" styleClass="primaryButton" text="Accedi" />
             <Label layoutX="92.0" layoutY="185.0" text="Username" />
             <Label layoutX="92.0" layoutY="241.0" text="Password" />
-         </children></Pane>
+         </children>
+      </Pane>
    </children>
 </AnchorPane>
