--- a/src/main/resources/com/calendly/calendly/fxml/LoginView.fxml
+++ b/src/main/resources/com/calendly/calendly/fxml/LoginView.fxml
@@ -7,15 +7,15 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="900.0" styleClass="external-pane" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.calendly.calendly.Controller.LoginController">
+<AnchorPane fx:id="ancorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="900.0" styleClass="external-pane" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.calendly.calendly.Controller.LoginController">
    <children>
-      <Pane layoutX="273.0" layoutY="58.0" prefHeight="425.0" prefWidth="354.0" styleClass="container-level-2" AnchorPane.bottomAnchor="217.0" AnchorPane.leftAnchor="273.0" AnchorPane.rightAnchor="273.0" AnchorPane.topAnchor="58.0">
+      <Pane fx:id="pane" layoutX="280.0" layoutY="95.0" prefHeight="425.0" prefWidth="354.0" styleClass="container-level-2" AnchorPane.bottomAnchor="95.0" AnchorPane.leftAnchor="270.0" AnchorPane.rightAnchor="270.0" AnchorPane.topAnchor="95.0">
          <children>
-            <TextField fx:id="UsernameField" layoutX="92.0" layoutY="201.0" promptText="username" styleClass="loginField" />
-            <PasswordField fx:id="PasswordField" layoutX="92.0" layoutY="257.0" promptText="password" styleClass="loginField" />
-            <Button fx:id="accediButton" layoutX="93.0" layoutY="374.0" mnemonicParsing="false" onAction="#Accedi" prefHeight="25.0" prefWidth="169.0" styleClass="primaryButton" text="Accedi" />
-            <Label layoutX="92.0" layoutY="185.0" text="Username" />
-            <Label layoutX="92.0" layoutY="241.0" text="Password" />
+            <TextField fx:id="UsernameField" layoutX="104.0" layoutY="199.0" promptText="username" styleClass="loginField" />
+            <PasswordField fx:id="PasswordField" layoutX="105.0" layoutY="261.0" promptText="password" styleClass="loginField" />
+            <Button fx:id="accediButton" layoutX="141.0" layoutY="372.0" mnemonicParsing="false" onAction="#Accedi" prefHeight="26.0" prefWidth="78.0" styleClass="primaryButton" text="Accedi" />
+            <Label fx:id="usernameLabel" layoutX="105.0" layoutY="181.0" text="Username" />
+            <Label fx:id="passwordLabel" layoutX="106.0" layoutY="242.0" text="Password" />
          </children>
       </Pane>
    </children>
