--- a/src/main/resources/com/calendly/calendly/css/dark.css
+++ b/src/main/resources/com/calendly/calendly/css/dark.css
@@ -9,17 +9,17 @@
     systemBlue:  #0a84ff;
     blueLight:   #2290ff;
     systemCyan:  #5ac8f5;
-
+    systemRed:   #ff453a;
 
     white:       #f0f0f0;
 
 
-    primaryBackgroundColor: systemGray6;
+    primaryBackgroundColor:   systemGray6;
     secondaryBackgroundColor: systemGray5;
-    thirdBackgroundColor: systemGray4;
+    thirdBackgroundColor:     systemGray4;
+    fourthBackgroundColor:    systemGray3;
 
     primaryTextColor: white;
-
 
     primaryBackgroundButtonColor: systemBlue;
     primaryOnHoverButtonColor:    blueLight;
