--- a/src/main/resources/com/calendly/calendly/fxml/LoginView.fxml
+++ b/src/main/resources/com/calendly/calendly/fxml/LoginView.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane fx:id="ancorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="900.0" styleClass="external-pane" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.calendly.calendly.Controller.LoginController">
    <children>
@@ -16,6 +17,11 @@
             <Button fx:id="accediButton" alignment="CENTER" contentDisplay="CENTER" disable="true" layoutX="149.0" layoutY="567.0" mnemonicParsing="false" onAction="#Accedi" prefHeight="26.0" prefWidth="78.0" styleClass="primaryButton" text="Accedi" textAlignment="CENTER" />
             <Label fx:id="usernameLabel" layoutX="105.0" layoutY="181.0" text="Username" />
             <Label fx:id="passwordLabel" layoutX="106.0" layoutY="242.0" text="Password" />
+            <Label fx:id="loginLabel" alignment="CENTER" layoutX="104.0" layoutY="54.0" prefHeight="45.0" prefWidth="159.0" text="Login">
+               <font>
+                  <Font size="48.0" />
+               </font>
+            </Label>
          </children>
       </Pane>
    </children>
