--- a/src/main/resources/com/calendly/calendly/fxml/AppuntamentiView.fxml
+++ b/src/main/resources/com/calendly/calendly/fxml/AppuntamentiView.fxml
@@ -5,21 +5,31 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="660.0" prefWidth="660.0" styleClass="container-level-2" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.calendly.calendly.Controller.AppuntamentiController">
    <children>
-      <TableView fx:id="table" layoutY="54.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="606.0" prefWidth="660.0" styleClass="container-level-2">
-         <columns>
-            <TableColumn fx:id="colonnaUtente" prefWidth="75.0" text="Utente" />
-            <TableColumn fx:id="colonnaEmail" prefWidth="75.0" text="Email" />
-            <TableColumn fx:id="colonnaOrario" prefWidth="75.0" text="Orario" />
-            <TableColumn fx:id="colonnaDipendente" prefWidth="99.0" text="Dipendente" />
-            <TableColumn fx:id="colonnaServizio" prefWidth="71.0" text="Servizio" />
-         </columns>
-      </TableView>
-      <Button layoutX="350.0" layoutY="20.0" mnemonicParsing="false" onAction="#aggiungiAppuntamento" styleClass="primaryButton" text="Aggiungi" />
-      <Button layoutX="450.0" layoutY="20.0" mnemonicParsing="false" onAction="#rimuoviAppuntamento" styleClass="primaryButton" text="Rimuovi" />
-      <Button layoutX="550.0" layoutY="20.0" mnemonicParsing="false" onAction="#modificaAppuntamento" styleClass="primaryButton" text="Modifica" />
-      <Label layoutX="14.0" layoutY="20.0" prefWidth="121.0" text="Appuntamenti" />
+      <VBox prefHeight="660.0" prefWidth="660.0">
+         <children>
+            <Pane prefHeight="55.0" prefWidth="660.0">
+               <children>
+                  <Button layoutX="350.0" layoutY="15.0" mnemonicParsing="false" onAction="#aggiungiAppuntamento" styleClass="primaryButton" text="Aggiungi" />
+                  <Button layoutX="550.0" layoutY="15.0" mnemonicParsing="false" onAction="#rimuoviAppuntamento" styleClass="primaryButton" text="Rimuovi" />
+                  <Button layoutX="450.0" layoutY="15.0" mnemonicParsing="false" onAction="#modificaAppuntamento" styleClass="primaryButton" text="Modifica" />
+                  <Label layoutX="14.0" layoutY="15.0" prefWidth="121.0" text="Appuntamenti" />
+               </children>
+            </Pane>
+            <Pane fx:id="pane" prefHeight="100.0" prefWidth="660.0" />
+            <TableView fx:id="table" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="513.0" prefWidth="660.0" styleClass="container-level-2">
+               <columns>
+                  <TableColumn fx:id="colonnaUtente" prefWidth="75.0" text="Utente" />
+                  <TableColumn fx:id="colonnaEmail" prefWidth="75.0" text="Email" />
+                  <TableColumn fx:id="colonnaOrario" prefWidth="75.0" text="Orario" />
+                  <TableColumn fx:id="colonnaDipendente" prefWidth="99.0" text="Dipendente" />
+                  <TableColumn fx:id="colonnaServizio" prefWidth="71.0" text="Servizio" />
+               </columns>
+            </TableView>
+         </children>
+      </VBox>
    </children>
 </Pane>
