--- a/src/main/resources/com/calendly/calendly/fxml/AppuntamentiAggiungiView.fxml
+++ b/src/main/resources/com/calendly/calendly/fxml/AppuntamentiAggiungiView.fxml
@@ -6,10 +6,10 @@
 <?import javafx.scene.layout.Pane?>
 
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="660.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.calendly.calendly.Controller.AppuntamentiAggiungiController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="660.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.calendly.calendly.Controller.GestioneAppuntamenti.AppuntamentiAggiungiController">
    <children>
-      <Button layoutX="584.0" layoutY="62.0" mnemonicParsing="false" onAction="#aggiungi" text="Aggiungi" />
-      <TextField fx:id="nomeUtenteField" layoutX="14.0" layoutY="38.0" />
+      <Button layoutX="584.0" layoutY="62.0" mnemonicParsing="false" onAction="#aggiungi" styleClass="primaryButton" text="Aggiungi" />
+      <TextField fx:id="nomeUtenteField" styleClass="loginField" layoutX="14.0" layoutY="38.0" />
       <Label layoutX="14.0" layoutY="14.0" text="NomeUtente" />
    </children>
 </Pane>
