--- a/src/main/resources/com/calendly/calendly/fxml/StatisticheView.fxml
+++ b/src/main/resources/com/calendly/calendly/fxml/StatisticheView.fxml
@@ -4,16 +4,21 @@
 <?import javafx.scene.chart.CategoryAxis?>
 <?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="660.0" prefWidth="660.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.calendly.calendly.Controller.StatisticheController">
    <children>
       <VBox alignment="TOP_CENTER" layoutX="267.0" layoutY="182.0" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Label text="Rendiconto settimanale" />
-            <BarChart prefHeight="200.0" prefWidth="200.0">
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Statistiche">
+               <font>
+                  <Font size="35.0" />
+               </font>
+            </Text>
+            <BarChart fx:id="chartSettimanale" prefHeight="200.0" prefWidth="200.0" title="Settimanale">
                <xAxis>
                   <CategoryAxis side="BOTTOM" />
                </xAxis>
@@ -21,8 +26,7 @@
                   <NumberAxis side="LEFT" />
                </yAxis>
             </BarChart>
-            <Label layoutX="326.0" layoutY="210.0" text="Rendiconto mensile" />
-            <BarChart prefHeight="200.0" prefWidth="200.0">
+            <BarChart fx:id="chartMensile" prefHeight="200.0" prefWidth="200.0" title="Mensile">
               <xAxis>
                 <CategoryAxis side="BOTTOM" />
               </xAxis>
@@ -30,8 +34,7 @@
                 <NumberAxis side="LEFT" />
               </yAxis>
             </BarChart>
-            <Label layoutX="326.0" layoutY="427.0" text="Rendiconto annuale" />
-            <BarChart prefHeight="200.0" prefWidth="200.0">
+            <BarChart fx:id="chartAnnuale" prefHeight="200.0" prefWidth="200.0" title="Annuale">
                <xAxis>
                   <CategoryAxis side="BOTTOM" />
                </xAxis>
