Aggiunta immagini e animazione a immagini in WelcomePageController.java

--- a/src/main/resources/com/calendly/calendly/css/style.css
+++ b/src/main/resources/com/calendly/calendly/css/style.css
@@ -57,8 +57,9 @@
     -fx-background-color: secondaryBackgroundColor;
 }
 
-
-
+.imagePainContainer {
+    -fx-background-color: blueLight;
+}
 
 
 
