--- a/src/main/resources/com/calendly/calendly/fxml/WelcomePage.fxml
+++ b/src/main/resources/com/calendly/calendly/fxml/WelcomePage.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.StackPane?>
@@ -15,6 +16,11 @@
                   <Insets bottom="25.0" />
                </StackPane.margin>
               </Button>
+            <Label fx:id="labelTitle" text="Welcome" StackPane.alignment="TOP_CENTER">
+               <StackPane.margin>
+                  <Insets top="10.0" />
+               </StackPane.margin>
+            </Label>
            </children>
         </StackPane>
    </children>
