--- a/src/main/resources/com/calendly/calendly/fxml/ImpostazioniView.fxml
+++ b/src/main/resources/com/calendly/calendly/fxml/ImpostazioniView.fxml
@@ -15,19 +15,19 @@
                <children>
                   <Pane prefHeight="45.0" prefWidth="655.0">
                      <children>
-                        <Label layoutX="7.0" layoutY="10.0" prefHeight="26.0" prefWidth="166.0" text="Cambia il tema dell'app:" />
+                        <Label layoutX="7.0" layoutY="10.0" prefHeight="26.0" prefWidth="166.0" text="Cambia il tema dell'app" />
                         <ComboBox fx:id="temiComboBox" layoutX="525.0" layoutY="11.0" onAction="#scegliTema" prefHeight="24.0" prefWidth="132.0" promptText="Scegli Tema" styleClass="primaryButton" />
                      </children>
                   </Pane>
                   <Pane prefHeight="50.0" prefWidth="655.0">
                      <children>
-                        <Button layoutX="594.0" layoutY="13.0" mnemonicParsing="false" onAction="#mostraInformazioni" styleClass="primaryButton" text="Mostra" />
-                        <Label layoutX="14.0" layoutY="12.0" prefHeight="26.0" prefWidth="166.0" text="Mostra informazioni:" />
+                        <Button layoutX="594.0" layoutY="13.0" mnemonicParsing="false" onAction="#modificaInformazioni" styleClass="primaryButton" text="Modifica" />
+                        <Label layoutX="14.0" layoutY="12.0" prefHeight="26.0" prefWidth="166.0" text="Modifica le informazioni presenti nel profilo" />
                      </children>
                   </Pane>
                   <Pane prefHeight="50.0" prefWidth="655.0">
                      <children>
-                        <Label layoutX="14.0" layoutY="12.0" prefHeight="26.0" prefWidth="166.0" text="Cambia password:" />
+                        <Label layoutX="14.0" layoutY="12.0" prefHeight="26.0" prefWidth="166.0" text="Cambia password" />
                         <Button layoutX="589.0" layoutY="13.0" mnemonicParsing="false" onAction="#cambiaPassword" styleClass="primaryButton" text="Cambia" />
                      </children>
                   </Pane>
