--- a/src/main/resources/com/calendly/calendly/fxml/WelcomePage.fxml
+++ b/src/main/resources/com/calendly/calendly/fxml/WelcomePage.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.text.Font?>
 
 <Pane fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="external-pane" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.calendly.calendly.Controller.WelcomePageController">
    <children>
@@ -16,10 +17,13 @@
                   <Insets bottom="25.0" />
                </StackPane.margin>
               </Button>
-            <Label fx:id="labelTitle" text="Welcome" StackPane.alignment="TOP_CENTER">
+            <Label fx:id="labelTitle" text="Welcome" textOverrun="CENTER_ELLIPSIS" StackPane.alignment="TOP_CENTER">
                <StackPane.margin>
                   <Insets top="10.0" />
                </StackPane.margin>
+               <font>
+                  <Font size="42.0" />
+               </font>
             </Label>
            </children>
         </StackPane>
