--- a/src/main/resources/com/calendly/calendly/fxml/DipendentiView.fxml
+++ b/src/main/resources/com/calendly/calendly/fxml/DipendentiView.fxml
@@ -7,16 +7,15 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.calendly.calendly.Controller.DipendentiViewController">
+<AnchorPane fx:id="ancorPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.calendly.calendly.Controller.DipendentiViewController">
    <children>
-      <TableView fx:id="tableView" layoutX="19.0" layoutY="55.0" onSort="#onSortTableView" prefHeight="296.0" prefWidth="563.0" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0">
+      <TableView fx:id="tableView" layoutX="19.0" layoutY="55.0" onSort="#onSortTableView" prefHeight="296.0" prefWidth="563.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="50.0">
         <columns>
-          <TableColumn prefWidth="75.0" text="Username" />
-          <TableColumn prefWidth="75.0" text="Nome" />
-            <TableColumn prefWidth="75.0" text="Cognome" />
-            <TableColumn prefWidth="75.0" text="Ruolo" />
-            <TableColumn prefWidth="75.0" text="Stipendio" />
+          <TableColumn fx:id="usernameCol" prefWidth="75.0" text="Username" />
+          <TableColumn fx:id="nameCol" prefWidth="75.0" text="Nome" />
+            <TableColumn fx:id="lastNameCol" prefWidth="75.0" text="Cognome" />
+            <TableColumn fx:id="roleCol" prefWidth="75.0" text="Ruolo" />
+            <TableColumn fx:id="salaryCol" prefWidth="75.0" text="Stipendio" />
         </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
