CSS sulle tableView

--- a/src/main/resources/com/calendly/calendly/css/dark.css
+++ b/src/main/resources/com/calendly/calendly/css/dark.css
@@ -18,6 +18,8 @@
     secondaryBackgroundColor: systemGray5;
     thirdBackgroundColor:     systemGray4;
     fourthBackgroundColor:    systemGray3;
+    fifthBackgroundColor:     systemGray2;
+    sixthBackgroundColor:     systemGray;
 
     primaryTextColor: white;
 
